<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">


    <LinearLayout
        style="@style/main_layout">


        <TextView
            style="@style/main_text"
            android:text="@string/is_service_run"/>

        <TextView
            android:id="@+id/isServiceRunTextView"
            style="@style/main_text"
            android:text="@string/service_not_run"/>

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/button_padding"
            android:layout_marginLeft="@dimen/main_layout_margin"
            android:layout_centerInParent="true"
            android:textSize="@dimen/button_small_size"
            android:text="@string/open_accessibility"/>

    </LinearLayout>

    <LinearLayout
        style="@style/main_layout">

        <TextView
            style="@style/main_text"
            android:text="@string/monitor_username"/>

        <TextView
            android:id="@+id/monitorUserNameTextView"
            android:text="@string/monitor_username_default"
            style="@style/main_text"/>

        <Button
            android:id="@+id/monitorUserNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/monitor_button_margin_left"
            android:text="@string/change"/>

    </LinearLayout>

    <LinearLayout
        style="@style/main_layout">

        <TextView
            style="@style/main_text"
            android:text="@string/monitor_keyword"/>

        <TextView
            android:id="@+id/monitorKeywordTextView"
            android:text="@string/monitor_keyword_default"
            style="@style/main_text"/>

        <Button
            android:id="@+id/monitorKeywordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/monitor_button_margin_left"
            android:text="@string/change"/>

    </LinearLayout>


    <LinearLayout
        style="@style/main_layout">

        <TextView
            style="@style/main_text"
            android:text="@string/message_type"/>

        <TextView
            android:id="@+id/messageTypeTextView"
            style="@style/main_text"/>


    </LinearLayout>

    <LinearLayout
        style="@style/main_layout">

        <TextView
            style="@style/main_text"
            android:text="@string/sender"/>

        <TextView
            android:id="@+id/senderTextView"
            style="@style/main_text"/>


    </LinearLayout>

    <LinearLayout
        style="@style/main_layout"
        android:orientation="vertical">

        <TextView
            style="@style/main_text"
            android:text="@string/receive_message"/>

        <TextView
            android:id="@+id/receiveMessageTextView"
            android:autoLink="all"
            style="@style/main_text"/>


    </LinearLayout>

    <LinearLayout
        style="@style/main_layout"
        android:orientation="vertical">

        <TextView
            style="@style/main_text"
            android:text="@string/send_message"/>

        <TextView
            android:id="@+id/sendMessageTextView"
            android:autoLink="all"
            style="@style/main_text"/>


    </LinearLayout>


</LinearLayout>