<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_margin="@dimen/dialog_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_top"
        android:text="@string/monitor_username_title"
        android:id="@+id/changeUsernameTitleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_top"
        android:layout_marginLeft="@dimen/dialog_margin_horizontal"
        android:layout_marginRight="@dimen/dialog_margin_horizontal"
        android:hint="@string/monitor_username_default"
        android:id="@+id/changeUsernameEditText"
        android:layout_below="@+id/changeUsernameTitleTextView"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin_top"
        android:layout_marginBottom="@dimen/dialog_margin_top"
        android:layout_below="@+id/changeUsernameEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dialog_button_margin"
            android:text="@string/dialog_cancel"
            android:id="@+id/cancelButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dialog_button_margin"
            android:text="@string/dialog_ok"
            android:id="@+id/okButton"/>
    </LinearLayout>

</RelativeLayout>